--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,7 +54,9 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".activity.AddRecipe" />
+        <activity android:name=".activity.AddRecipe"
+            android:windowSoftInputMode="adjustPan"
+            />
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
     </application>
 
